diversos/traefik/ingressroute-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`veronez.net`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
    middlewares:
      - name: ratelimit
  tls:
    secretName: juquinha-net-secret
